[metadata]
name = twitcaspy
version = attr:twitcaspy.__version__
author = Alma field
author_email = twitcaspy@alma-field.com
description = Twitcasting library for Python
long_description_content_type = text/markdown
license = MIT
url = https://github.com/Alma-field/twitcaspy
download_url = None
classifiers =
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

[options]
zip_safe = True

[nosetests]
tests = tests.test_api
